--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -1,4 +1,5 @@
 .light {
-  --body-background: white;
-  --header-foreground: black;
+  --body-background-color: white;
+  --header-foreground-color: black;
+  --border-color: rgba(200, 200, 200, 1);
 }
