--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,6 @@
 body {
   font-family: 'Inter', sans-serif;
-  background-color: var(--body-background);
+  background-color: var(--body-background-color);
 }
 
 #root {
