--- a/src/components/Products.module.scss
+++ b/src/components/Products.module.scss
@@ -1,4 +1,4 @@
-section {
+.section {
   padding: 1em;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -9,6 +9,10 @@ section {
   padding: 1em;
   border: 1px solid var(--border-color);
   border-radius: 0.5em;
+}
+
+.thumbnail {
+  aspect-ratio: 1;
 }
 
 .priceAndRating {
