Change em to rem for svg size

--- a/src/components/Loading.module.scss
+++ b/src/components/Loading.module.scss
@@ -5,8 +5,8 @@
   align-items: center;
 
   & > svg {
-    height: 3em;
-    width: 3em;
+    height: 3rem;
+    width: 3rem;
     animation: spin 2s linear infinite;
   }
 
