--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,7 @@
 body {
   font-family: 'Inter', sans-serif;
-  background-color: var(--body-background-color);
+  background-color: var(--main-background-color);
+  color: var(--main-foreground-color);
 }
 
 #root {
