--- a/src/components/Products.module.scss
+++ b/src/components/Products.module.scss
@@ -1,8 +1,16 @@
 .section {
   padding: 1em;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 1em;
+
+  @media (width < 40em) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (width < 30em) {
+    font-size: 0.8rem;
+  }
 }
 
 .product {
@@ -20,6 +28,12 @@
   display: flex;
   gap: 0.6em;
   align-items: center;
+
+  @media (width < 23em) {
+    flex-direction: column;
+    align-items: start;
+    gap: 0.4em;
+  }
 }
 
 .price {
@@ -35,6 +49,7 @@
   & > svg {
     opacity: 0.8;
     width: 0.9em;
+    flex-shrink: 0;
   }
 }
 
