--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -1,11 +1,13 @@
 .light {
   --main-foreground-color: black;
   --main-background-color: white;
+  --navbar-background-color: rgba(255, 255, 255, 0.7);
   --border-color: rgba(200, 200, 200, 1);
 }
 
 .dark {
   --main-foreground-color: white;
   --main-background-color: black;
+  --navbar-background-color: rgba(0, 0, 0, 0.7);
   --border-color: rgba(100, 100, 100, 1);
 }
