--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -3,13 +3,13 @@
   top: 0;
   z-index: 1;
   height: var(--navbar-height);
-  margin-inline: 1em;
-  border-bottom: 1px solid var(--border-color);
+  padding-inline: 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 3em;
   background-color: var(--navbar-background-color);
+  backdrop-filter: blur(5px);
 }
 
 .navLink {
