--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  height: var(--navbar-height);
+  height: 3.5rem;
   padding-inline: 1em;
   display: flex;
   justify-content: space-between;
