--- a/src/components/NoSearchResults.module.scss
+++ b/src/components/NoSearchResults.module.scss
@@ -1,8 +1,7 @@
 .noSearchResults {
-  height: calc(100dvh - var(--navbar-height));
+  margin-top: calc(50dvh - 7rem);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 1em;
 
