Add general styles

--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,8 @@
     font-display: swap;
     src: url('/fonts/Inter-Bold.woff2') format('woff2');
   }
+
+  html {
+    font-family: 'Inter', sans-serif;
+  }
 }
